--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -1,4 +1,4 @@
-service: product-service
+service: imported-products
 frameworkVersion: '2'
 
 plugins:
@@ -9,12 +9,35 @@ provider:
   runtime: nodejs12.x
   region: eu-west-1
 
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "s3:ListBucket"
+      Resource:
+        - "arn:aws:s3:::product-service.imported-products"
+    - Effect: "Allow"
+      Action: "s3:*"
+      Resource:
+        - "arn:aws:s3:::product-service.imported-products/*"
+
 functions:
-  import-producs-file:
-    handler: dist/handler.importProductsFile
+  import-products-file:
+    handler: handler.importProductsFile
     events:
       - http:
           path: import
           method: get
           cors: true
+          request:
+            parameters:
+              querystrings:
+                name: true
+  parse-products-file:
+    handler: handler.parseProductsFile
+    events:
+      - s3:
+          bucket: product-service.imported-products
+          event: s3:ObjectCreated:*
+          rules:
+            - prefix: uploaded/
+          existing: true
 
