--- a/import-service/package.json
+++ b/import-service/package.json
@@ -10,6 +10,7 @@
     "deploy": "sls deploy"
   },
   "dependencies": {
-    "aws-sdk": "^2.792.0"
+    "aws-sdk": "^2.792.0",
+    "csv-parser": "^2.3.3"
   }
 }
