--- a/import-service/package.json
+++ b/import-service/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^26.6.3",
     "serverless-dotenv-plugin": "^3.1.0"
   },
   "scripts": {
-    "deploy": "sls deploy"
+    "deploy": "sls deploy",
+    "test": "jest"
   },
   "dependencies": {
     "aws-sdk": "^2.792.0",
