--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -8,6 +8,8 @@ provider:
   name: aws
   runtime: nodejs12.x
   region: eu-west-1
+  environment:
+    SQS_URL: ${cf:product-service-dev.ExportProductQueueUrl}
 
   iamRoleStatements:
     - Effect: "Allow"
@@ -18,6 +20,10 @@ provider:
       Action: "s3:*"
       Resource:
         - "arn:aws:s3:::product-service.imported-products/*"
+    - Effect: "Allow"
+      Action: "sqs:*"
+      Resource:
+        - ${cf:product-service-dev.ExportProductQueueArn}
 
 functions:
   import-products-file:
