--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.797.0",
     "pg": "^8.4.2"
   },
   "exports": "./handler.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "deploy": "sls deploy",
+    "deploy": "yarn build && sls deploy",
     "test": "jest"
   },
   "devDependencies": {
